# ObjectDetectionMetricsLibrary

./: .gitignore  DetectionMetricManager.py  LICENSE  README.md  a.py  ajusted_gt.json  evaluation_metrics.json  metrics.py  object_detection_metrics.py  pyproject.toml  pytest.ini  setup.py  test.py  utils.py
.github/workflows/: ci.yaml
Configs_and_Weights/First Stage Proposed Model/: weigths.md
Configs_and_Weights/First Stage Proposed Model/Cascade_R_CNN/: cascade_r_cnn.py  log.txt  predicts_bbox_cascade_swin.json.bbox.json  predicts_bbox_cascade_swin_val.json.bbox.json
Configs_and_Weights/First Stage Proposed Model/CenterNet/: CenterNet.py  log.txt  predicts_bbox_Centernet.bbox.json  predicts_bbox_Centernet_val.bbox.json
Configs_and_Weights/First Stage Proposed Model/Faster_R-CNN/: faster_r_cnn.py  log.txt  predicts_bbox_Faster_R_CNN.json.bbox.json  predicts_bbox_Faster_R_CNN_val.json.bbox.json
Configs_and_Weights/First Stage Proposed Model/RetinaNet/: Retinanet_r101_fpn.py  log.txt  predicts_bbox_Retina.bbox.json  predicts_bbox_Retina_val.bbox.json
Configs_and_Weights/First Stage Proposed Model/TOOD/: TOOD.py  log.txt  predicts_bbox_TOOD.bbox.json  predicts_bbox_TOOD_val.bbox.json
Configs_and_Weights/First Stage Proposed Model/YOLOX/: YOLOX_predict_box.json.bbox.json  YOLOX_predict_box_val.json.bbox.json  log.txt  yolox.py
Configs_and_Weights/Second Stage Proposed Model/: Classification_Second_Stage.ipynb  Generate_Crops.ipynb  dataset.md  optimize_backbone.py  weights.md
ObjectDetectionMetrics/: manager.py
detmet/: __init__.py  manager.py  metrics.py  results.py  utils.py  validations.py  visualization.py
detmet/metrics/: DetectionMetrics.py  __init__.py  metrics.py
examples/: tutorial.ipynb
tests/: conftest.py  manager_test.py  metrics_test.py  output.txt  test_coco_compat.py  test_coco_numerical_equivalence.py  test_manager.py  test_metrics.py  test_utils.py  test_validations.py  test_visualization.py
tests/fixtures/: coco_fixtures.py  coco_realistic_fixtures.py
tests/jsons/: _annotations.coco.json  tood_predicts_bbox.bbox.json
tests/jsons/medium/: gt_coco.json  predictions_coco.json
tests/jsons/simple/: gt_coco.json  predictions_coco.json
tests/utils/: coco_oracle.py  debug_coco_expected_check.py
